--- a/Synthese_Vue/package.json
+++ b/Synthese_Vue/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "js-yaml": "^3.13.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
