--- a/Synthese_Vue/package.json
+++ b/Synthese_Vue/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "js-yaml": "^3.13.1",
+    "serialize-javascript": "^3.0.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
